The current message for CGI stderr output when using mod_cgi looks similar to the following: AH01215: "error-message" \r: C:/Apache/cgi-bin/my-cgi-program If the stderr output from the CGI program is vague, the error message might be confusing to users. (e.g. "Execution failed" C:/Apache/cgi-bin/my-cgi-program). The proposed patch changes the error message to: AH01215: stderr from C:/Apache/cgi-bin/my-cgi-program: "error-message" The patch also fixes the Windows line-ending issue observed above.
Created attachment 35662 [details] Proposed patch for trunk
thanks, committed in r1820716.