PR 61980: AH01215 CGI stderr forwarding msg improvement

*) mod_cgi: Improve AH01215 messages to make it more clear that the message is
  the CGI scripts stderr output. PR 61980. [Hank Ibell <hwibell gmail.com>]

Submitted By: Hank Ibell <hwibell gmail.com>
Commited By: covener





git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1820716 13f79535-47bb-0310-9956-ffa450edef68